--- a/src/components/list/chatList/addUser/addUser.css
+++ b/src/components/list/chatList/addUser/addUser.css
@@ -1,7 +1,9 @@
 .addUser {
   height: max-content;
   width: max-content;
-  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 15px 30px 30px;
   background-color: rgba(17, 25, 40, 0.85);
   border-radius: 10px;
   position: absolute;
@@ -11,19 +13,45 @@
   right: 0;
   margin: auto;
 
+  .cross {
+    text-align: right;
+    margin-bottom: 10px;
+    cursor: pointer;
+    display: inline-block;
+    /* width: 10px; */
+
+    img {
+      filter: invert(100%);
+      mix-blend-mode: screen;
+      padding: 9px;
+      height: 32px;
+      width: 32px;
+      border-radius: 5px;
+      background-color: rgba(17, 25, 40, 0.3);
+
+      &:hover {
+        background-color: rgba(17, 25, 40, 0.5);
+      }
+
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+  }
+
   form {
     display: flex;
     gap: 20px;
 
     input {
-      padding: 20px;
+      padding: 15px;
       border: none;
       outline: none;
       border-radius: 10px;
     }
 
     button {
-      padding: 20px;
+      padding: 15px;
       gap: 10px;
       background-color: #1a73e8;
       border: none;
@@ -37,6 +65,7 @@
     display: flex;
     align-items: center;
     margin-top: 50px;
+    justify-content: space-between;
 
     .detail {
       display: flex;
