--- a/src/components/list/chatList/chatList.css
+++ b/src/components/list/chatList/chatList.css
@@ -35,12 +35,14 @@
     }
 
     .add {
-      width: 36px;
-      height: 36px;
+      width: 40px;
+      height: 40px;
       background-color: rgba(17, 25, 40, 0.5);
-      padding: 10px;
+      padding: 7px;
       cursor: pointer;
       border-radius: 10px;
+      filter: invert(1) brightness(0.04);
+
     }
   }
 
