--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -19,8 +19,8 @@
       gap: 20px;
 
       img {
-        height: 60px;
-        width: 60px;
+        height: 52px;
+        width: 55px;
         border-radius: 10px;
         object-fit: cover;
       }
@@ -47,10 +47,11 @@
       display: flex;
       align-items: center;
       gap: 20px;
+      cursor: pointer;
 
       img {
-        height: 20px;
-        width: 20px;
+        height: 23px;
+        width: 23px;
       }
     }
   }
@@ -78,7 +79,7 @@
             flex-direction: row-reverse;
   
             p {
-              padding: 15px;
+              padding: 11px;
               background-color: #5183fe;
               border-radius: 10px;
               border-radius: 10px 0px 10px 10px;
