--- a/src/components/list/chatList/chatList.css
+++ b/src/components/list/chatList/chatList.css
@@ -42,7 +42,11 @@
       cursor: pointer;
       border-radius: 10px;
       filter: invert(1) brightness(0.04);
+      transition: all 0.1s ease-in-out;
 
+      &:active {
+        transform: scale(0.9);
+      }
     }
   }
 
@@ -88,6 +92,4 @@
       background-color: #5182fecd;
     }
   }
-
-
 }
