--- a/src/components/list/userInfo/userInfo.css
+++ b/src/components/list/userInfo/userInfo.css
@@ -22,9 +22,28 @@
     gap: 20px;
 
     img {
-      width: 20px;
-      height: 20px;
+      border-radius: 0;
+      width: 25px;
+      height: 25px;
       cursor: pointer;
+    }
+  }
+
+  button.logout {
+    padding: 10px;
+    background-color: #1a73e8;
+    padding: 8px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    transition: all 0.1s ease-in-out;
+
+    &:hover {
+        background-color: rgba(220, 74, 105, 1);
+    }
+
+    &:active {
+      transform: scale(0.9);
     }
   }
 }
